// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text No Wrap 1`] = `
<DocumentFragment>
  <span
    class="Text-text Text-noWrap"
  >
    Lorem Ipsum dolor sit amed
  </span>
</DocumentFragment>
`;

exports[`Text Render Basic Text 1`] = `
<DocumentFragment>
  <span
    class="Text-text"
  >
    FioriText
  </span>
</DocumentFragment>
`;

exports[`Text Render Whitespace 1`] = `
<DocumentFragment>
  <span
    class="Text-text Text-renderWhitespace"
  >
    Lorem Ipsum dolor sit amed
  </span>
</DocumentFragment>
`;
